--- a/AP_1_1_Primeiros_passos_no_Python.ipynb
+++ b/AP_1_1_Primeiros_passos_no_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWl5T8+Oq6+SBofOfEw7j0",
+      "authorship_tag": "ABX9TyOboV6oM8Hlt2KzDvGbDUj/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/gustavocvmoreira/LES0773-Estatistica-Aplicada-III/blob/main/AP_1_1_Primeiros_passos_no_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Prof. Gustavo Moreira / Esalq-USP / LES0773 - Estatística aplicada III** 👽"
+      ],
+      "metadata": {
+        "id": "-ZB-tPZEhw_P"
+      }
     },
     {
       "cell_type": "markdown",
